--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Layer zero */
 body {
     background-color: #E5190B;
@@ -9,7 +8,6 @@ body {
 
 .gradient {
     background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.7));
-    height: 100vh;
     width: 100%;
 }
 
@@ -20,13 +18,13 @@ body {
 }
 
 
+
 img {
     object-fit: fill;
     width: 100%;
-    height: 100%;
+    height: 100%; 
     border: #000000;
     border-width: 1px;
-
 }
 
 /* Layer one  */
@@ -39,10 +37,10 @@ img {
     width: 190px;
     height: 60px;
     margin-top: 55px;
-    margin-left: 168.92px;
+    margin-left: 150px;
 }
 
-#breadCrumbs{
+#breadCrumbs {
     position: absolute;
     margin-top: 48px;
     margin-left: 1256px;
@@ -57,11 +55,11 @@ img {
     font-family: 'Outfit', sans-serif;
     z-index: 1;
     position: absolute;
-    left: 168.92px;
-    top: 140px;
+    margin-top: 203px;
+    margin-left: 150px;
     font-size: 45px;
     font-weight: 700;
-    line-height: 80px;
+    line-height: 60px;
 }
 
 #reality {
@@ -73,41 +71,41 @@ img {
 
 #para {
     position: absolute;
-    margin-top: 225px;
-    margin-left: 856px;
+    margin-top: 239px;
+    margin-left: 776px;
     font-family: 'Inter';
     font-style: semi-bold;
     font-size: 23px;
-    line-height: 30px;
+    line-height: 25px;
     z-index: 1;
     color: white;
 }
 
 
 
-.cards{
+.cards {
     position: absolute;
-     margin-top: 250px;
-    /* margin-left: 150px; */ 
+    margin-top: 250px;
     z-index: 1;
     display: flex;
     justify-content: center;
     width: 100%;
-    
+
 }
 
 
 
 
-.card1{
+.card1 {
     background-color: #9C261E;
     position: relative;
     display: inline-block;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 345px;
     top: 175px;
 }
-.card1 > h2{
+
+.card1>h2 {
     font-family: 'Public sans';
     position: absolute;
     top: 125px;
@@ -116,35 +114,38 @@ img {
     color: white;
 }
 
-.card1 > h2> span{
-    color:#0FBE21;
+.card1>h2>span {
+    color: #0FBE21;
 }
 
-.card1 > p{
-    position: absolute;
-    top: 200px;
-    left: 40px;
-    color: white;
-}
-.card1 > img{
+.card1>p {
     position: absolute;
     top: 210px;
-    left: 125px;
-    width: 20px;
-    height: 20px;
+    left: 40px;
+    color: white;
+    font-family: 'Inter';
 }
 
-    
-.card2{
+.card1>img {
+    position: absolute;
+    top: 227px;
+    left: 135px;
+    width: 15px;
+    height: 15px;
+}
+
+
+.card2 {
     position: relative;
     display: inline-block;
     background-image: url('assets/card2bg.png');
     background-size: cover;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 345px;
     top: 175px;
 }
-.card2 > h2{
+
+.card2>h2 {
     font-family: 'Public sans';
     position: absolute;
     top: 125px;
@@ -152,50 +153,61 @@ img {
     color: white;
     left: 40px;
 }
-.card2 > p{
-    position: absolute;
-    top: 200px;
-    left: 40px;
-    color: white;
 
+.card2>h2>span{
+    color: #0FBE21;
 }
-.card2 > img{
+
+.card2>p {
     position: absolute;
     top: 210px;
-    left: 125px;
-    width: 20px;
-    height: 20px;
+    left: 40px;
+    color: white;
+    font-family: 'Inter';
+
 }
 
-.card3{
+
+
+.card3 {
     position: relative;
     display: inline-block;
     background-color: #9C261E;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 345px;
     top: 175px;
 }
-.card3 > h2{
+
+.card3>h2 {
     font-family: 'Public sans';
     font-size: 30px;
+    font-style: semi-bold;
     color: white;
     position: absolute;
     top: 125px;
     left: 40px;
 }
-.card3 > p{
-    position: absolute;
-    top: 200px;
-    left: 40px;
-    color: white;
 
+.card3>h2>span {
+    color: #0FBE21;
 }
-.card3 > img{
+
+.card3>p {
     position: absolute;
     top: 210px;
-    left: 125px;
-    width: 20px;
-    height: 20px;
+    left: 40px;
+    color: white;
+    font-family: 'Inter';
+
+
+}
+
+.card3>img {
+    position: absolute;
+    top: 227px;
+    left: 135px;
+    width: 15px;
+    height: 15px;
 }
 
 
@@ -211,5 +223,3 @@ img {
     height: 100px;
     z-index: 2;
 } */
-
- 
